 * Invulnerability now protects from sabotage damage
 * Sabotage kills hog instantly when health reaches 0
 * Reliably prevent using of Lonely Cries and baseball bat specials when usage not allowed
 * Don't explode Anno 1302, Medicine and Bouncy Boomerang if drowning
 * Don't play “Missed” and “Laugh” taunt when those don't make sense
 * Fix retreat timer not turning red for some weapons

Space Invation:
 + Display round score in a separate row
 + Keep round score displayed after round ends, remove round score announcer message
 * Fix rare Lua error message spam at end of game
 * Fix round score and other info numbers messing up after screen resize

Content:
 + New Sudden Death water texture for CrazyMission theme
 + Add dust flakes for Cheese and CrazyMission themes

Lua API:
 + New call: Retreat(time [, respectGetAwayTimeFactor): Force current turn into retreating mode
 + New call: GetAmmoTimer(gearUid, ammoType): Returns current set timer for given ammoType and hog gear in ms. Returns nil for non-timerable ammo
 + New call: EnableSwitchHog(): Enable hog switching
 + New call: GetAmmo(ammoType): Returns ammo configuration (corresponds to SetAmmo)
 + New parameter: SetAmmoTexts: 5th param. showExtra: Set to false to hide texts like “Not yet available”
 + New parameter: ShowMission: 6th param. forceDisplay: Set to true to prevent this particular mission panel to be hidden manually by player
 * Changed global: lfCurrentHog becomes lfCurHogCrate
 * Fixed variable: TotalRounds was -1 (instead of 0) in first real round after hog placement phase

====================== 0.9.24.1 ====================
 * Fix crash when portable portal device is fired at reduced graphics quality
 * Fix possible crash when starting Hedgewars frontend in fullscreen mode

====================== 0.9.24 ======================
Game:
 + New weapon: Minigun
 + New game modifier: Enable switch hedgehog at start of turn
 + Change weapon icons: Mudball, air mine